...
                let appCoordinator = AppCoordinator(presenter: presenter, app: app)
                appCoordinator.start()
            },
            addItem: { tableView, dataSource in
                let searchCoordinator = SearchCoordinator(presenter: presenter, didSelect: { app in
                    let alertController = UIAlertController(
                        title: NSLocalizedString("Add to Board", comment: ""),
                        message: app.name,
                        preferredStyle: .Alert
                    )
                    alertController.addAction(
                        UIAlertAction(
                            title: NSLocalizedString("Add", comment: ""),
                            style: .Default,
                            handler: { _ in
                                board.addNewItem(app)
                                presenter.popViewControllerAnimated(true)
                                tableView.reloadData()
                            }
...
