...
            selectItem: { board in
                let appsCoordinator = AppsCoordinator(presenter: presenter, board: board)
                appsCoordinator.start()
            },
            addItem: { tableView, dataSource in
                let alertController = UIAlertController(
                    title: NSLocalizedString("Add New Board", comment: ""),
                    message: nil,
                    preferredStyle: .Alert
                )
                alertController.addTextFieldWithConfigurationHandler { textField in
                    textField.placeholder = NSLocalizedString("Name", comment: "")
                }
...
